--- a/public/gerenciar-produtos.html
+++ b/public/gerenciar-produtos.html
@@ -73,11 +73,14 @@
   <div class="grid" id="produtos-grid"></div>
 
   <script>
-    const produtos = [
-      { nome: 'Câmera DSLR', imagem: 'camera.jpg', nota: 4.5 },
-      { nome: 'Tripé', imagem: 'tripe.jpg', nota: 4.0 },
-      { nome: 'Iluminação LED', imagem: 'led.jpg', nota: 4.8 }
-    ];
+      // Simulação dos produtos (mesma estrutura do gerenciador)
+  const usuarioAtual = 1; // Simulação: ID do usuário logado
+
+  const produtos = [
+    { nome: 'Câmera DSLR', imagem: 'camera.jpg', nota: 4.5, usuario_id: 1 },
+    { nome: 'Tripé', imagem: 'tripe.jpg', nota: 4.0, usuario_id: 1 },
+    { nome: 'Iluminação LED', imagem: 'led.jpg', nota: 4.8, usuario_id: 2 }
+  ];
 
     function exibirProdutos(lista) {
   const grid = document.getElementById('produtos-grid');
