descrição da mudança

--- a/public/gerenciar-produtos.html
+++ b/public/gerenciar-produtos.html
@@ -82,27 +82,32 @@
     { nome: 'Iluminação LED', imagem: 'led.jpg', nota: 4.8, usuario_id: 2 }
   ];
 
-    function exibirProdutos(lista) {
-  const grid = document.getElementById('produtos-grid');
-  grid.innerHTML = '';
+  function exibirProdutos(lista) {
+    const grid = document.getElementById('produtos-grid');
+    grid.innerHTML = '';
 
-  const produtosDoUsuario = lista.filter(p => p.usuario_id === usuarioAtual);
+    const produtosDoUsuario = lista.filter(p => p.usuario_id === usuarioAtual);
 
-  produtosDoUsuario.forEach(produto => {
-    const card = document.createElement('div');
-    card.className = 'card';
-    card.innerHTML = `
-      <img src="${produto.imagem}" alt="${produto.nome}" />
-      <h3>${produto.nome}</h3>
-      <div class="nota">Nota: ${produto.nota}</div>
-    `;
-    card.onclick = () => {
-      const index = produtos.indexOf(produto);
-      window.location.href = `cadastro-produto.html?id=${index}`;
-    };
-    grid.appendChild(card);
-  });
-}
+    produtosDoUsuario.forEach(produto => {
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `
+        <img src="${produto.imagem}" alt="${produto.nome}" />
+        <h3>${produto.nome}</h3>
+        <div class="nota">Nota: ${produto.nota}</div>
+      `;
+      card.onclick = () => {
+        const index = produtos.indexOf(produto);
+        window.location.href = `cadastro-produto.html?id=${index}`;
+      };
+      grid.appendChild(card);
+    });
+  }
+
+localStorage.setItem('usuario_id', 1);
+const usuarioAtual = parseInt(localStorage.getItem('usuario_id'));
+
+exibirProdutos(produtos);
 
     function filtrarProdutos() {
       const pesquisa = document.getElementById('pesquisa').value.toLowerCase();
