descrição da mudança

--- a/public/cadastro-produto.html
+++ b/public/cadastro-produto.html
@@ -193,17 +193,26 @@
 
   // Lê o ID da URL
   const params = new URLSearchParams(window.location.search);
-  const index = parseInt(params.get('id'));
+  const index = parseInt(new URLSearchParams(window.location.search).get('id'));
 
-  // Se o produto existir, preenche os campos
-  if (!isNaN(index) && produtos[index]) {
-    document.getElementById('nome').value = p.nome;
-    document.getElementById('descricao').value = p.descricao;
-    document.getElementById('referencia').value = p.referencia_fabrica;
-    document.getElementById('codigo').value = p.codigo_barras;
-    document.getElementById('usuario_id').value = p.usuario_id;
-    document.getElementById('categoria_id').value = p.categoria_id;
-  }
+if (!isNaN(index)) {
+  fetch(`https://fotoload-api.onrender.com/produtos/${index}`)
+    .then(res => {
+      if (!res.ok) throw new Error('Produto não encontrado');
+      return res.json();
+    })
+    .then(p => {
+      document.getElementById('nome').value = p.nome;
+      document.getElementById('descricao').value = p.descricao;
+      document.getElementById('referencia').value = p.referencia_fabrica;
+      document.getElementById('codigo').value = p.codigo_barras;
+      document.getElementById('usuario_id').value = p.usuario_id;
+      document.getElementById('categoria_id').value = p.categoria_id;
+    })
+    .catch(err => {
+      console.error('Erro ao buscar produto:', err);
+    });
+}
   
   
   document.getElementById('cadastroForm').addEventListener('submit', async function (e) {
