descrição da mudança

--- a/public/cadastro-produto.html
+++ b/public/cadastro-produto.html
@@ -144,6 +144,15 @@
 <div class="msg" id="msg"></div>
 
 <script>
+  document.addEventListener('DOMContentLoaded', function () {
+  const form = document.getElementById('cadastroForm');
+  if (form) {
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      // lógica de envio
+    });
+  }
+});
   // Monta campos de foto com preview
   for (let i = 0; i < 6; i++) {
     const div = document.createElement('div');
