--- a/public/cadastro-produto.html
+++ b/public/cadastro-produto.html
@@ -60,49 +60,6 @@
     }
   </style>
 </head>
-<script>
-  document.querySelector('form').addEventListener('submit', function (e) {
-    e.preventDefault();
-
-    const urlParams = new URLSearchParams(window.location.search);
-    const id = urlParams.get('id');
-
-    const produto = {
-      nome: document.getElementById('nome').value,
-      descricao: document.getElementById('descricao').value,
-      referencia_fabrica: document.getElementById('referencia').value,
-      codigo_barras: document.getElementById('codigo').value,
-      usuario_id: parseInt(document.getElementById('usuario_id').value),
-      categoria_id: parseInt(document.getElementById('categoria_id').value),
-      imagem_url: document.getElementById('imagem').src // se estiver usando URL
-    };
-
-    const metodo = id ? 'PUT' : 'POST';
-    const endpoint = id ? `/api/produto/${id}` : '/api/produto';
-
-    fetch(endpoint, {
-      method: metodo,
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify(produto)
-    })
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Erro ao salvar produto');
-        }
-        return response.json();
-      })
-      .then(data => {
-        alert('Produto salvo com sucesso!');
-        window.location.href = '/gerenciar-produtos'; // redireciona após salvar
-      })
-      .catch(error => {
-        console.error('Erro:', error);
-        alert('Falha ao salvar produto');
-      });
-  });
-</script>
 <body>
   <div id="menu"></div>
   <script>
@@ -112,183 +69,172 @@
         document.getElementById('menu').innerHTML = html;
       });
   </script>
+
   <h1>📦 Cadastro de Produto com Fotos</h1>
 
-    <form id="cadastroForm">
-  <!-- Dados do produto -->
-  <label>Nome:</label>
-  <input type="text" id="nome" required />
+  <form id="cadastroForm">
+    <label>Nome:</label>
+    <input type="text" id="nome" required />
 
-  <label>Descrição:</label>
-  <textarea id="descricao" rows="3" required></textarea>
+    <label>Descrição:</label>
+    <textarea id="descricao" rows="3" required></textarea>
 
-  <label>Referência de Fábrica:</label>
-  <input type="text" id="referencia" />
+    <label>Referência de Fábrica:</label>
+    <input type="text" id="referencia" />
 
-  <label>Código de Barras:</label>
-  <input type="text" id="codigo" />
+    <label>Código de Barras:</label>
+    <input type="text" id="codigo" />
 
-  <label>ID do Usuário:</label>
-  <input type="number" id="usuario_id" required />
+    <label>ID do Usuário:</label>
+    <input type="number" id="usuario_id" required />
 
-  <label>ID da Categoria:</label>
-  <input type="number" id="categoria_id" required />
+    <label>ID da Categoria:</label>
+    <input type="number" id="categoria_id" required />
 
-  <!-- Fotos -->
-  <h3>🖼️ Adicionar até 6 fotos</h3>
-  <div id="fotos"></div>
+    <h3>🖼️ Adicionar até 6 fotos</h3>
+    <div id="fotos"></div>
 
-  <button type="submit">Cadastrar Produto e Fotos</button>
-</form>
+    <button type="submit">Cadastrar Produto e Fotos</button>
+  </form>
 
-<div class="msg" id="msg"></div>
+  <div class="msg" id="msg"></div>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-  const form = document.getElementById('cadastroForm');
-  if (form) {
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      // lógica de envio
-    });
-  }
-});
-  // Monta campos de foto com preview
-  for (let i = 0; i < 6; i++) {
-    const div = document.createElement('div');
-    div.className = 'foto-campo';
-    div.innerHTML = `
-    <label>Foto ${i + 1}:</label>
-    <select name="tipo[${i}]" onchange="alternarEntrada(this, ${i})">
-      <option value="arquivo">Arquivo</option>
-      <option value="url">URL</option>
-    </select>
-    <input type="file" name="arquivo[${i}]" />
-    <input type="text" name="url[${i}]" style="display:none;" placeholder="https://imagem.jpg" />
-    <div id="preview-${i}"></div>
-  `;
-    document.getElementById('fotos').appendChild(div);
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('cadastroForm');
 
-    // Preview da imagem
-    div.querySelector(`[name="arquivo[${i}]"]`).addEventListener('change', function () {
-      adicionarPreview(this, i);
-    });
-  }
-
-  function alternarEntrada(select, index) {
-    const tipo = select.value;
-    document.querySelector(`[name="arquivo[${index}]"]`).style.display =
-      tipo === 'arquivo' ? 'inline' : 'none';
-    document.querySelector(`[name="url[${index}]"]`).style.display =
-      tipo === 'url' ? 'inline' : 'none';
-  }
-
-  function adicionarPreview(fileInput, index) {
-    const preview = document.getElementById(`preview-${index}`);
-    preview.innerHTML = '';
-    const file = fileInput.files[0];
-    if (file && file.type.startsWith('image/')) {
-      const img = document.createElement('img');
-      img.className = 'preview';
-      img.src = URL.createObjectURL(file);
-      preview.appendChild(img);
-    } else {
-      preview.textContent = 'Arquivo inválido.';
-    }
-  }
-
-  
-
-
-  // Lê o ID da URL
-  const params = new URLSearchParams(window.location.search);
-  const index = parseInt(new URLSearchParams(window.location.search).get('id'));
-
-if (!isNaN(index)) {
-  fetch(`https://fotoload-api.onrender.com/produtos/${index}`)
-    .then(res => {
-      if (!res.ok) throw new Error('Produto não encontrado');
-      return res.json();
-    })
-    .then(p => {
-      document.getElementById('nome').value = p.nome;
-      document.getElementById('descricao').value = p.descricao;
-      document.getElementById('referencia').value = p.referencia_fabrica;
-      document.getElementById('codigo').value = p.codigo_barras;
-      document.getElementById('usuario_id').value = p.usuario_id;
-      document.getElementById('categoria_id').value = p.categoria_id;
-    })
-    .catch(err => {
-      console.error('Erro ao buscar produto:', err);
-    });
-}
-  
-  
-  document.getElementById('cadastroForm').addEventListener('submit', async function (e) {
-    e.preventDefault();
-    const msg = document.getElementById('msg');
-    msg.textContent = '';
-
-    const dados = {
-      nome: document.getElementById('nome').value.trim(),
-      descricao: document.getElementById('descricao').value.trim(),
-      referencia_fabrica: document.getElementById('referencia').value.trim(),
-      codigo_barras: document.getElementById('codigo').value.trim(),
-      usuario_id: Number(document.getElementById('usuario_id').value),
-      categoria_id: Number(document.getElementById('categoria_id').value),
-    };
-
-    if (!dados.referencia_fabrica && !dados.codigo_barras) {
-      msg.textContent = '❌ Informe referência de fábrica ou código de barras.';
-      return;
-    }
-
-    try {
-      const res = await fetch('https://fotoload-api.onrender.com/produtos', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(dados),
-      });
-
-      if (!res.ok) throw new Error(`Erro HTTP: ${res.status}`);
-      const produto = await res.json();
-      const produtoId = produto.id;
-
-      // Envia fotos
+      // Monta campos de foto com preview
       for (let i = 0; i < 6; i++) {
-        const tipo = document.querySelector(`[name="tipo[${i}]"]`).value;
+        const div = document.createElement('div');
+        div.className = 'foto-campo';
+        div.innerHTML = `
+          <label>Foto ${i + 1}:</label>
+          <select name="tipo[${i}]" onchange="alternarEntrada(this, ${i})">
+            <option value="arquivo">Arquivo</option>
+            <option value="url">URL</option>
+          </select>
+          <input type="file" name="arquivo[${i}]" />
+          <input type="text" name="url[${i}]" style="display:none;" placeholder="https://imagem.jpg" />
+          <div id="preview-${i}"></div>
+        `;
+        document.getElementById('fotos').appendChild(div);
 
-        if (tipo === 'arquivo') {
-          const fileInput = document.querySelector(`[name="arquivo[${i}]"]`);
-          if (fileInput.files.length > 0) {
-            const formData = new FormData();
-            formData.append('arquivo', fileInput.files[0]);
-            await fetch(
-              `https://fotoload-api.onrender.com/produtos/${produtoId}/fotos/upload`,
-              {
-                method: 'POST',
-                body: formData,
-              }
-            );
-          }
-        } else if (tipo === 'url') {
-          const url = document.querySelector(`[name="url[${i}]"]`).value.trim();
-          if (url) {
-            await fetch(`https://fotoload-api.onrender.com/produtos/${produtoId}/fotos/url`, {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ url }),
-            });
-          }
+        div.querySelector(`[name="arquivo[${i}]"]`).addEventListener('change', function () {
+          adicionarPreview(this, i);
+        });
+      }
+
+      function alternarEntrada(select, index) {
+        const tipo = select.value;
+        document.querySelector(`[name="arquivo[${index}]"]`).style.display =
+          tipo === 'arquivo' ? 'inline' : 'none';
+        document.querySelector(`[name="url[${index}]"]`).style.display =
+          tipo === 'url' ? 'inline' : 'none';
+      }
+
+      function adicionarPreview(fileInput, index) {
+        const preview = document.getElementById(`preview-${index}`);
+        preview.innerHTML = '';
+        const file = fileInput.files[0];
+        if (file && file.type.startsWith('image/')) {
+          const img = document.createElement('img');
+          img.className = 'preview';
+          img.src = URL.createObjectURL(file);
+          preview.appendChild(img);
+        } else {
+          preview.textContent = 'Arquivo inválido.';
         }
       }
 
-      msg.textContent = `✅ Produto criado (ID: ${produtoId}) e fotos enviadas com sucesso!`;
-      document.getElementById('cadastroForm').reset();
-      document.querySelectorAll('[id^="preview-"]').forEach((el) => (el.innerHTML = ''));
-    } catch (err) {
-      console.error('Erro:', err);
-      msg.textContent = '❌ Falha ao cadastrar produto ou enviar fotos.';
-    }
-  });
-</script>
+      // Preenche dados se estiver editando
+      const index = parseInt(new URLSearchParams(window.location.search).get('id'));
+      if (!isNaN(index)) {
+        fetch(`https://fotoload-api.onrender.com/produtos/${index}`)
+          .then(res => {
+            if (!res.ok) throw new Error('Produto não encontrado');
+            return res.json();
+          })
+          .then(p => {
+            document.getElementById('nome').value = p.nome;
+            document.getElementById('descricao').value = p.descricao;
+            document.getElementById('referencia').value = p.referencia_fabrica;
+            document.getElementById('codigo').value = p.codigo_barras;
+            document.getElementById('usuario_id').value = p.usuario_id;
+            document.getElementById('categoria_id').value = p.categoria_id;
+          })
+          .catch(err => {
+            console.error('Erro ao buscar produto:', err);
+          });
+      }
+
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault();
+        const msg = document.getElementById('msg');
+        msg.textContent = '';
+
+        const dados = {
+          nome: document.getElementById('nome').value.trim(),
+          descricao: document.getElementById('descricao').value.trim(),
+          referencia_fabrica: document.getElementById('referencia').value.trim(),
+          codigo_barras: document.getElementById('codigo').value.trim(),
+          usuario_id: Number(document.getElementById('usuario_id').value),
+          categoria_id: Number(document.getElementById('categoria_id').value),
+        };
+
+        if (!dados.referencia_fabrica && !dados.codigo_barras) {
+          msg.textContent = '❌ Informe referência de fábrica ou código de barras.';
+          return;
+        }
+
+        try {
+          const res = await fetch('https://fotoload-api.onrender.com/produtos', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(dados),
+          });
+
+          if (!res.ok) throw new Error(`Erro HTTP: ${res.status}`);
+          const produto = await res.json();
+          const produtoId = produto.id;
+
+          // Envia fotos
+          for (let i = 0; i < 6; i++) {
+            const tipo = document.querySelector(`[name="tipo[${i}]"]`).value;
+
+            if (tipo === 'arquivo') {
+              const fileInput = document.querySelector(`[name="arquivo[${i}]"]`);
+              if (fileInput.files.length > 0) {
+                const formData = new FormData();
+                formData.append('arquivo', fileInput.files[0]);
+                await fetch(
+                  `https://fotoload-api.onrender.com/produtos/${produtoId}/fotos/upload`,
+                  {
+                    method: 'POST',
+                    body: formData,
+                  }
+                );
+              }
+            } else if (tipo === 'url') {
+              const url = document.querySelector(`[name="url[${i}]"]`).value.trim();
+              if (url) {
+                await fetch(`https://fotoload-api.onrender.com/produtos/${produtoId}/fotos/url`, {
+                  method: 'POST',
+                  headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ url }),
+                });
+              }
+            }
+          }
+
+          msg.textContent = `✅ Produto criado (ID: ${produtoId}) e fotos enviadas com sucesso!`;
+          form.reset();
+          document.querySelectorAll('[id^="preview-"]').forEach((el) => (el.innerHTML = ''));
+        } catch (err) {
+          console.error('Erro:', err);
+          msg.textContent = '❌ Falha ao cadastrar produto ou enviar fotos.';
+        }
+      });
+    });
+  </script>
+</body>
+</html>
