descrição da mudança

--- a/admin.html
+++ b/admin.html
@@ -47,10 +47,7 @@
 
     <script>
           fetch('https://fotoload-api.onrender.com/usuarios')
-      <<<<<<< HEAD
-
-      =======
-      >>>>>>> e06ec2c (Fixando model ProdutoNota)
+       (Fixando model ProdutoNota)
             .then(res => res.json())
             .then(lista => {
               const tbody = document.getElementById('usuarios');
